fixed overflowing long word problem

--- a/movie-rec/app/assets/stylesheets/application.scss
+++ b/movie-rec/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
  */
  /*Boostrap*/
 @import "bootstrap";
+
+ .container {
+    word-wrap: break-word;
+}
